--- a/src/anatomy.styl
+++ b/src/anatomy.styl
@@ -22,6 +22,14 @@
   background-color #d4397a
   z-index 10
 
+
+.dissection.outline:after,
+.dissection.outline.top:after
+  height 1.5rem
+  width 1px
+  top 100%
+  right 50%
+
 .dissection.outline.left:after
   height 1px
   width 1.5rem
@@ -33,12 +41,6 @@
   width 1.5rem
   top 50%
   right 100%
-
-.dissection.outline.top:after
-  height 1.5rem
-  width 1px
-  top 100%
-  right 50%
 
 .dissection.outline.bottom:after
   height 36px
