Make dissection more precise

--- a/src/anatomy.styl
+++ b/src/anatomy.styl
@@ -16,7 +16,7 @@
 .dissection:after
   content ""
   position absolute
-  height 36px
+  height 48px
   top 100%
   width 1px
   background-color #d4397a
@@ -25,33 +25,33 @@
 
 .dissection.outline:after,
 .dissection.outline.top:after
-  height 1.5rem
+  height 48px
   width 1px
   top 100%
   right 50%
 
 .dissection.outline.left:after
   height 1px
-  width 1.5rem
+  width 48px
   top 50%
   left 100%
 
 .dissection.outline.right:after
   height 1px
-  width 1.5rem
+  width 48px
   top 50%
   right 100%
 
 .dissection.outline.bottom:after
-  height 36px
+  height 48px
   width 1px
-  top -36px
+  top calc(-100% - 24px)
   right 50%
 
 .dissection.button-center:after
   content ""
   position absolute
-  height 36px
+  height 48px
   top 100%
   width 1px
   background-color #d4397a
