--- a/src/anatomy.styl
+++ b/src/anatomy.styl
@@ -61,6 +61,7 @@
   content ""
   position absolute
   width 48px
+  top 50%
   right 100%
   height 1px
   background-color #d4397a
@@ -69,8 +70,9 @@
 .dissection.button-icon:after
   content ""
   position absolute
-  width 42px
+  width 48px
   left 100%
+  top 50%
   height 1px
   background-color #d4397a
   z-index 10
@@ -79,7 +81,7 @@
   content ""
   position absolute
   height 1.5rem
-  left calc(100% + 42px)
+  left calc(100% + 48px)
   width 1.5rem
   border 1px solid #d4397a
   z-index 10
