--- a/src/speccer.styl
+++ b/src/speccer.styl
@@ -12,7 +12,9 @@
   line-height 150%
   font-size 16px
   z-index 20
-  &.full
+  box-sizing: content-box;
+  &.full,
+  &.enclose
     counter-increment type
     content counter(type, upper-alpha)
   &:after
@@ -36,6 +38,39 @@
         width 48px
         top 50%
         right 100%
+    &.enclose
+      border-radius 0
+      background-color transparent
+      color red
+      border 1px solid #d4397a
+      &.right
+        &:after
+          left calc(100% + 49px)
+          right auto
+        &:before
+          left 100%
+          right auto
+      &.left
+        &:after
+          left calc(-1px - 48px)
+          right auto
+        &:before
+          right 100%
+          left auto
+      &.top
+        &:after
+          top calc(-1px - 48px)
+          bottom auto
+        &:before
+          bottom 100%
+          top auto
+      &.bottom
+        &:after
+          top calc(100% + 49px)
+          bottom auto
+        &:before
+          top 100%
+          bottom auto
     &.full
       border-radius 0
       background-color transparent
@@ -161,6 +196,67 @@
 
 .dissection.outline.full.top:before,
 .dissection.outline.full.bottom:before
+  left 50%
+  transform translateX(-50%)
+  width 1px
+  height 49px
+
+.dissection.outline.enclose.right,
+.dissection.outline.enclose.left
+  width 8px
+
+.dissection.outline.enclose.top,
+.dissection.outline.enclose.bottom
+  height 8px
+
+.dissection.outline.enclose.right:after,
+.dissection.outline.enclose.left:after,
+.dissection.outline.enclose.top:after,
+.dissection.outline.enclose.bottom:after
+  content counter(type, upper-alpha)
+  height 1.5rem
+  width 1.5rem
+  display flex
+  position absolute
+  border-radius 100%
+  background-color #d4397a
+  color #fff
+  font-weight 600
+  align-items center
+  justify-content center
+  line-height 150%
+  font-size 16px
+  z-index 20
+
+.dissection.outline.enclose.right:after,
+.dissection.outline.enclose.left:after
+  top 50%
+  transform translateY(-50%)
+
+.dissection.outline.enclose.top:after,
+.dissection.outline.enclose.bottom:after
+  left 50%
+  transform translateX(-50%)
+
+.dissection.outline.enclose.right:before,
+.dissection.outline.enclose.left:before,
+.dissection.outline.enclose.top:before,
+.dissection.outline.enclose.bottom:before
+  content ""
+  position absolute
+  background-color #d4397a
+  z-index 20
+  display block
+
+.dissection.outline.enclose.right:before,
+.dissection.outline.enclose.left:before
+  top 50%
+  transform translateY(-50%)
+  height 1px
+  width 49px
+
+.dissection.outline.enclose.top:before,
+.dissection.outline.enclose.bottom:before
   left 50%
   transform translateX(-50%)
   width 1px
