--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -1,4 +1,5 @@
-.dissection
+.ph.speccer.dissection
+  font-family sans-serif
   height 1.5rem
   width 1.5rem
   display flex
@@ -6,14 +7,15 @@
   border-radius 100%
   background-color #d4397a
   color white
-  font-weight 600
+  font-weight 400
   align-items center
   justify-content center
   line-height 150%
   font-size 16px
   z-index 100000
+  box-sizing content-box
 
-.dissection:after
+.ph.speccer.dissection:after
   content ""
   position absolute
   height 48px
@@ -23,32 +25,32 @@
   z-index 99999
 
 
-.dissection.outline:after,
-.dissection.outline.top:after
+.ph.speccer.dissection.outline:after,
+.ph.speccer.dissection.outline.top:after
   height 48px
   width 1px
   top 100%
   right 50%
 
-.dissection.outline.left:after
+.ph.speccer.dissection.outline.left:after
   height 1px
   width 48px
   top 50%
   left 100%
 
-.dissection.outline.right:after
+.ph.speccer.dissection.outline.right:after
   height 1px
   width 48px
   top 50%
   right 100%
 
-.dissection.outline.bottom:after
+.ph.speccer.dissection.outline.bottom:after
   height 48px
   width 1px
   top calc(-100% - 24px)
   right 50%
 
-.dissection.button-center:after
+.ph.speccer.dissection.button-center:after
   content ""
   position absolute
   height 48px
@@ -57,7 +59,7 @@
   background-color #d4397a
   z-index 99999
 
-.dissection.button-outline:after
+.ph.speccer.dissection.button-outline:after
   content ""
   position absolute
   width 48px
@@ -67,7 +69,7 @@
   background-color #d4397a
   z-index 99999
 
-.dissection.button-icon:after
+.ph.speccer.dissection.button-icon:after
   content ""
   position absolute
   width 48px
@@ -77,7 +79,7 @@
   background-color #d4397a
   z-index 99999
 
-.dissection.button-icon:before
+.ph.speccer.dissection.button-icon:before
   content ""
   position absolute
   height 1.5rem
@@ -87,21 +89,7 @@
   z-index 99999
 
 
-.dissection
-  height 1.5rem
-  width 1.5rem
-  display flex
-  position absolute
-  border-radius 100%
-  background-color #d4397a
-  color #fff
-  font-weight 600
-  align-items center
-  justify-content center
-  line-height 150%
-  font-size 16px
-  z-index 100000
-  box-sizing: content-box;
+.ph.speccer.dissection
   &:after
     content ""
     position absolute
@@ -215,8 +203,8 @@
       border 1px solid #d4397a
       z-index 99999
 
-.dissection.outline.top:after,
-.dissection.outline:after
+.ph.speccer.dissection.outline.top:after,
+.ph.speccer.dissection.outline:after
   height 48px
   width 1px
   top 100%
@@ -225,18 +213,18 @@
 [data-anatomy-section]
   counter-reset type
 
-.dissection.outline.full.right,
-.dissection.outline.full.left
+.ph.speccer.dissection.outline.full.right,
+.ph.speccer.dissection.outline.full.left
   width 8px
 
-.dissection.outline.full.top,
-.dissection.outline.full.bottom
+.ph.speccer.dissection.outline.full.top,
+.ph.speccer.dissection.outline.full.bottom
   height 8px
 
-.dissection.outline.full.right:after,
-.dissection.outline.full.left:after,
-.dissection.outline.full.top:after,
-.dissection.outline.full.bottom:after
+.ph.speccer.dissection.outline.full.right:after,
+.ph.speccer.dissection.outline.full.left:after,
+.ph.speccer.dissection.outline.full.top:after,
+.ph.speccer.dissection.outline.full.bottom:after
   content attr(data-dissection-counter)
   height 1.5rem
   width 1.5rem
@@ -245,59 +233,58 @@
   border-radius 100%
   background-color #d4397a
   color #fff
-  font-weight 600
   align-items center
   justify-content center
   line-height 150%
   font-size 16px
   z-index 100000
 
-.dissection.outline.full.right:after,
-.dissection.outline.full.left:after
+.ph.speccer.dissection.outline.full.right:after,
+.ph.speccer.dissection.outline.full.left:after
   top 50%
   transform translateY(-50%)
 
-.dissection.outline.full.top:after,
-.dissection.outline.full.bottom:after
+.ph.speccer.dissection.outline.full.top:after,
+.ph.speccer.dissection.outline.full.bottom:after
   left 50%
   transform translateX(-50%)
 
-.dissection.outline.full.right:before,
-.dissection.outline.full.left:before,
-.dissection.outline.full.top:before,
-.dissection.outline.full.bottom:before
+.ph.speccer.dissection.outline.full.right:before,
+.ph.speccer.dissection.outline.full.left:before,
+.ph.speccer.dissection.outline.full.top:before,
+.ph.speccer.dissection.outline.full.bottom:before
   content ""
   position absolute
   background-color #d4397a
   z-index 100000
   display block
 
-.dissection.outline.full.right:before,
-.dissection.outline.full.left:before
+.ph.speccer.dissection.outline.full.right:before,
+.ph.speccer.dissection.outline.full.left:before
   top 50%
   transform translateY(-50%)
   height 1px
   width 49px
 
-.dissection.outline.full.top:before,
-.dissection.outline.full.bottom:before
+.ph.speccer.dissection.outline.full.top:before,
+.ph.speccer.dissection.outline.full.bottom:before
   left 50%
   transform translateX(-50%)
   width 1px
   height 49px
 
-.dissection.outline.enclose.right,
-.dissection.outline.enclose.left
+.ph.speccer.dissection.outline.enclose.right,
+.ph.speccer.dissection.outline.enclose.left
   width 8px
 
-.dissection.outline.enclose.top,
-.dissection.outline.enclose.bottom
+.ph.speccer.dissection.outline.enclose.top,
+.ph.speccer.dissection.outline.enclose.bottom
   height 8px
 
-.dissection.outline.enclose.right:after,
-.dissection.outline.enclose.left:after,
-.dissection.outline.enclose.top:after,
-.dissection.outline.enclose.bottom:after
+.ph.speccer.dissection.outline.enclose.right:after,
+.ph.speccer.dissection.outline.enclose.left:after,
+.ph.speccer.dissection.outline.enclose.top:after,
+.ph.speccer.dissection.outline.enclose.bottom:after
   content attr(data-dissection-counter)
   height 1.5rem
   width 1.5rem
@@ -306,49 +293,48 @@
   border-radius 100%
   background-color #d4397a
   color #fff
-  font-weight 600
   align-items center
   justify-content center
   line-height 150%
   font-size 16px
   z-index 100000
 
-.dissection.outline.enclose.right:after,
-.dissection.outline.enclose.left:after
+.ph.speccer.dissection.outline.enclose.right:after,
+.ph.speccer.dissection.outline.enclose.left:after
   top 50%
   transform translateY(-50%)
 
-.dissection.outline.enclose.top:after,
-.dissection.outline.enclose.bottom:after
+.ph.speccer.dissection.outline.enclose.top:after,
+.ph.speccer.dissection.outline.enclose.bottom:after
   left 50%
   transform translateX(-50%)
 
-.dissection.outline.enclose.right:before,
-.dissection.outline.enclose.left:before,
-.dissection.outline.enclose.top:before,
-.dissection.outline.enclose.bottom:before
+.ph.speccer.dissection.outline.enclose.right:before,
+.ph.speccer.dissection.outline.enclose.left:before,
+.ph.speccer.dissection.outline.enclose.top:before,
+.ph.speccer.dissection.outline.enclose.bottom:before
   content ""
   position absolute
   background-color #d4397a
   z-index 100000
   display block
 
-.dissection.outline.enclose.right:before,
-.dissection.outline.enclose.left:before
+.ph.speccer.dissection.outline.enclose.right:before,
+.ph.speccer.dissection.outline.enclose.left:before
   top 50%
   transform translateY(-50%)
   height 1px
   width 49px
 
-.dissection.outline.enclose.top:before,
-.dissection.outline.enclose.bottom:before
+.ph.speccer.dissection.outline.enclose.top:before,
+.ph.speccer.dissection.outline.enclose.bottom:before
   left 50%
   transform translateX(-50%)
   width 1px
   height 49px
 
-.dissection.button-icon:after,
-.dissection.button-outline:after
+.ph.speccer.dissection.button-icon:after,
+.ph.speccer.dissection.button-outline:after
   content ""
   position absolute
   width 48px
