--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -1,12 +1,12 @@
 .ph.speccer.dissection
   font-family sans-serif
-  height 1.5rem
-  width 1.5rem
+  height var(--ph-speccer-pin-size)
+  width var(--ph-speccer-pin-size)
   display flex
   position absolute
   border-radius 100%
-  background-color #d4397a
-  color white
+  background-color var(--ph-speccer-pin-color)
+  color var(--ph-speccer-color-text-light)
   font-weight 400
   align-items center
   justify-content center
@@ -18,128 +18,90 @@
 .ph.speccer.dissection:after
   content ""
   position absolute
-  height 48px
+  height var(--ph-speccer-pin-space)
   top 100%
-  width 1px
-  background-color #d4397a
+  width var(--ph-speccer-line-width)
+  background-color var(--ph-speccer-pin-color)
   z-index 99999
 
 
 .ph.speccer.dissection.outline:after,
 .ph.speccer.dissection.outline.top:after
-  height 48px
-  width 1px
+  height var(--ph-speccer-pin-space)
+  width var(--ph-speccer-line-width)
   top 100%
   right 50%
 
 .ph.speccer.dissection.outline.left:after
-  height 1px
-  width 48px
+  height var(--ph-speccer-line-width)
+  width var(--ph-speccer-pin-space)
   top 50%
   left 100%
 
 .ph.speccer.dissection.outline.right:after
-  height 1px
-  width 48px
+  height var(--ph-speccer-line-width)
+  width var(--ph-speccer-pin-space)
   top 50%
   right 100%
 
 .ph.speccer.dissection.outline.bottom:after
-  height 48px
-  width 1px
-  top calc(-100% - 24px)
+  height var(--ph-speccer-pin-space)
+  width var(--ph-speccer-line-width)
+  top calc(-100% - (var(--ph-speccer-pin-space) / 2))
   right 50%
-
-.ph.speccer.dissection.button-center:after
-  content ""
-  position absolute
-  height 48px
-  top 100%
-  width 1px
-  background-color #d4397a
-  z-index 99999
-
-.ph.speccer.dissection.button-outline:after
-  content ""
-  position absolute
-  width 48px
-  top 50%
-  right 100%
-  height 1px
-  background-color #d4397a
-  z-index 99999
-
-.ph.speccer.dissection.button-icon:after
-  content ""
-  position absolute
-  width 48px
-  left 100%
-  top 50%
-  height 1px
-  background-color #d4397a
-  z-index 99999
-
-.ph.speccer.dissection.button-icon:before
-  content ""
-  position absolute
-  height 1.5rem
-  left calc(100% + 48px)
-  width 1.5rem
-  border 1px solid #d4397a
-  z-index 99999
 
 
 .ph.speccer.dissection
   &:after
     content ""
     position absolute
-    height 48px
+    height var(--ph-speccer-pin-space)
     top 100%
-    width 1px
-    background-color #d4397a
+    width var(--ph-speccer-line-width)
+    background-color var(--ph-speccer-pin-color)
     z-index 99999
   &.outline
     &.left
       &:after
-        height 1px
-        width 48px
+        height var(--ph-speccer-line-width)
+        width var(--ph-speccer-pin-space)
         top 50%
         left 100%
     &.right
       &:after
-        height 1px
-        width 48px
+        height var(--ph-speccer-line-width)
+        width var(--ph-speccer-pin-space)
         top 50%
         right 100%
     &.enclose
       border-radius 0
       background-color transparent
-      color red
-      border 1px solid #d4397a
+      color var(--ph-speccer-measure-color)
+      border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
       &.right
         &:after
-          left calc(100% + 49px)
+          left calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)))
           right auto
         &:before
           left 100%
           right auto
       &.left
         &:after
-          left calc(-1px - 48px)
+          left calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space))
           right auto
         &:before
           right 100%
           left auto
       &.top
         &:after
-          top calc(-1px - 48px)
+          top calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space))
           bottom auto
         &:before
           bottom 100%
           top auto
       &.bottom
         &:after
-          top calc(100% + 49px)
+          top calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)))
           bottom auto
         &:before
           top 100%
@@ -147,66 +109,44 @@
     &.full
       border-radius 0
       background-color transparent
-      color red
-      border 1px solid #d4397a
+      color var(--ph-speccer-measure-color)
+      border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
       &.right
         border-left none
         &:after
-          left calc(8px + 48px)
+          left calc(8px + var(--ph-speccer-pin-space))
         &:before
           left 100%
       &.left
         border-right none
         &:after
-          left calc(-8px - 48px)
+          left calc(-8px - var(--ph-speccer-pin-space))
         &:before
           right 100%
       &.top
         border-bottom none
         &:after
-          top calc(-8px - 48px)
+          top calc(-8px - var(--ph-speccer-pin-space))
         &:before
           bottom 100%
       &.bottom
         border-top none
         &:after
-          top calc(8px + 48px)
+          top calc(8px + var(--ph-speccer-pin-space))
         &:before
           top 100%
     &.bottom
       &:after
-        height 48px
-        width 1px
-        top calc(-100% - 24px)
+        height var(--ph-speccer-pin-space)
+        width var(--ph-speccer-line-width)
+        top calc(-100% - (var(--ph-speccer-pin-space) / 2))
         right 50%
-  &.button-center
-    &:after
-      content ""
-      position absolute
-      height 48px
-      top 100%
-      width 1px
-      background-color #d4397a
-      z-index 99999
-  &.button-outline
-    &:after
-      right 100%
-  &.button-icon
-    &:after
-      left 100%
-    &:before
-      content ""
-      position absolute
-      height 1.5rem
-      left calc(100% + 48px)
-      width 1.5rem
-      border 1px solid #d4397a
-      z-index 99999
+
 
 .ph.speccer.dissection.outline.top:after,
 .ph.speccer.dissection.outline:after
-  height 48px
-  width 1px
+  height var(--ph-speccer-pin-space)
+  width var(--ph-speccer-line-width)
   top 100%
   right 50%
 
@@ -226,13 +166,13 @@
 .ph.speccer.dissection.outline.full.top:after,
 .ph.speccer.dissection.outline.full.bottom:after
   content attr(data-dissection-counter)
-  height 1.5rem
-  width 1.5rem
+  height var(--ph-speccer-pin-size)
+  width var(--ph-speccer-pin-size)
   display flex
   position absolute
   border-radius 100%
-  background-color #d4397a
-  color #fff
+  background-color var(--ph-speccer-pin-color)
+  color var(--ph-speccer-color-text-light)
   align-items center
   justify-content center
   line-height 150%
@@ -255,7 +195,7 @@
 .ph.speccer.dissection.outline.full.bottom:before
   content ""
   position absolute
-  background-color #d4397a
+  background-color var(--ph-speccer-pin-color)
   z-index 100000
   display block
 
@@ -263,15 +203,15 @@
 .ph.speccer.dissection.outline.full.left:before
   top 50%
   transform translateY(-50%)
-  height 1px
-  width 49px
+  height var(--ph-speccer-line-width)
+  width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
 .ph.speccer.dissection.outline.full.top:before,
 .ph.speccer.dissection.outline.full.bottom:before
   left 50%
   transform translateX(-50%)
-  width 1px
-  height 49px
+  width var(--ph-speccer-line-width)
+  height calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
 .ph.speccer.dissection.outline.enclose.right,
 .ph.speccer.dissection.outline.enclose.left
@@ -286,13 +226,13 @@
 .ph.speccer.dissection.outline.enclose.top:after,
 .ph.speccer.dissection.outline.enclose.bottom:after
   content attr(data-dissection-counter)
-  height 1.5rem
-  width 1.5rem
+  height var(--ph-speccer-pin-size)
+  width var(--ph-speccer-pin-size)
   display flex
   position absolute
   border-radius 100%
-  background-color #d4397a
-  color #fff
+  background-color var(--ph-speccer-pin-color)
+  color var(--ph-speccer-color-text-light)
   align-items center
   justify-content center
   line-height 150%
@@ -315,7 +255,7 @@
 .ph.speccer.dissection.outline.enclose.bottom:before
   content ""
   position absolute
-  background-color #d4397a
+  background-color var(--ph-speccer-pin-color)
   z-index 100000
   display block
 
@@ -323,22 +263,12 @@
 .ph.speccer.dissection.outline.enclose.left:before
   top 50%
   transform translateY(-50%)
-  height 1px
-  width 49px
+  height var(--ph-speccer-line-width)
+  width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
 .ph.speccer.dissection.outline.enclose.top:before,
 .ph.speccer.dissection.outline.enclose.bottom:before
   left 50%
   transform translateX(-50%)
-  width 1px
-  height 49px
-
-.ph.speccer.dissection.button-icon:after,
-.ph.speccer.dissection.button-outline:after
-  content ""
-  position absolute
-  width 48px
-  top 50%
-  height 1px
-  background-color #d4397a
-  z-index 99999
+  width var(--ph-speccer-line-width)
+  height calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
