--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,25 +1,67 @@
-$ph-speccer-color-padding = rgb(219, 111, 255);
-$ph-speccer-color-margin = rgb(255, 247, 111);
+$ph-speccer-color-padding = rgba(219, 111, 255, 0.4);
+$ph-speccer-color-padding-hover = rgb(219, 111, 255);
+$ph-speccer-color-margin = rgba(255, 247, 111, 0.4);
+$ph-speccer-color-margin-hover = rgb(255, 247, 111);
 $ph-speccer-color-text-light = rgb(255, 255, 255);
-$ph-speccer-color-text-dark = rgb(51, 51, 51);
-$ph-speccer-color-border-dark = rgb(51, 51, 51);
-$ph-speccer-color-text-pink = rgb(255, 58, 168);
-$ph-speccer-color-border-pink = rgb(255, 58, 168);
+$ph-speccer-color-text-dark = rgb(51,51,51);
+$ph-speccer-color-contrast = rgb(255, 58, 168);
+$ph-speccer-spacing-color = $ph-speccer-color-contrast;
+$ph-speccer-measure-color = rgb(255,0,0);
+$ph-speccer-pin-color = $ph-speccer-color-contrast;
+$ph-speccer-typography-background-color = rgb(255, 255,255);
+$ph-speccer-typography-color-property = rgb(63, 133, 242);
+$ph-speccer-typography-color-text = rgb(87, 87, 91);
+$ph-speccer-typography-color-value = $ph-speccer-color-contrast;
 $ph-speccer-depth-opacity-400 = 0.4;
+$ph-speccer-font-family = "Menlo for Powerline", "Menlo Regular for Powerline", "DejaVu Sans Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+$ph-speccer-font-size = 12px;
+$ph-speccer-line-height = 12px;
+$ph-speccer-pin-size = 24px
+$ph-speccer-pin-space = 48px
+$ph-speccer-line-width = 1px
+$ph-speccer-line-width-negative = -1px
+$ph-speccer-measure-size = 8px
+
+
+.ph.speccer
+  --ph-speccer-color-padding: $ph-speccer-color-padding;
+  --ph-speccer-color-padding-hover: $ph-speccer-color-padding-hover;
+  --ph-speccer-color-margin: $ph-speccer-color-margin;
+  --ph-speccer-color-margin-hover: $ph-speccer-color-margin-hover;
+  --ph-speccer-color-text-light: $ph-speccer-color-text-light;
+  --ph-speccer-color-text-dark: $ph-speccer-color-text-dark;
+  --ph-speccer-color-contrast: $ph-speccer-color-contrast;
+  --ph-speccer-spacing-color: var(--ph-speccer-color-contrast);
+  --ph-speccer-measure-color: $ph-speccer-measure-color;
+  --ph-speccer-pin-color: var(--ph-speccer-color-contrast);
+  --ph-speccer-typography-background-color: $ph-speccer-typography-background-color;
+  --ph-speccer-typography-color-property: $ph-speccer-typography-color-property;
+  --ph-speccer-typography-color-text: $ph-speccer-typography-color-text;
+  --ph-speccer-typography-color-value: var(--ph-speccer-color-contrast);
+  --ph-speccer-depth-opacity-400: $ph-speccer-depth-opacity-400;
+  --ph-speccer-font-family: $ph-speccer-font-family;
+  --ph-speccer-font-size: $ph-speccer-font-size;
+  --ph-speccer-line-height: $ph-speccer-line-height;
+  --ph-speccer-pin-size: $ph-speccer-pin-size;
+  --ph-speccer-pin-space: $ph-speccer-pin-space;
+  --ph-speccer-line-width: $ph-speccer-line-width;
+  --ph-speccer-line-width-negative: $ph-speccer-line-width-negative;
+  --ph-speccer-measure-size: $ph-speccer-measure-size;
 
 
 .ph.speccer,
 .ph.speccer::after,
 .ph.speccer::before
-  font-family "Menlo for Powerline", "Menlo Regular for Powerline", "DejaVu Sans Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace !important
+  font-family var(--ph-speccer-font-family) !important
   justify-content center
   align-items center
   z-index 99999
   position absolute
+  pointer-events none
+  user-select none
   display flex
   font-size 12px
   box-sizing border-box
-  transition all 0.2s ease-in
   line-height 12px
 
 @require './anatomy.styl'
