--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -1,6 +1,6 @@
 .ph.speccer.typography
-  background-color #ffffff
-  color #57575b
+  background-color var(--ph-speccer-typography-background-color)
+  color var(--ph-speccer-typography-color-text)
   font-size 12px
   padding 8px 24px
   max-width none
@@ -8,21 +8,21 @@
   display block
   text-align left
   line-height 140%
-  border 1px solid #e227b3
+  border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
   min-width 320px
 
   &:hover
-    border 1px solid #e227b3
+    border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
 
   &:after
     content ""
     position absolute
     display block
-    background-color #e227b3
+    background-color var(--ph-speccer-pin-color)
     left 100%
     top 50%
     transform translateY(-50%)
-    height 1px
+    height var(--ph-speccer-line-width)
     width 48px
 
   &.left
@@ -30,7 +30,7 @@
       left 100%
       top 50%
       transform translateY(-50%)
-      height 1px
+      height var(--ph-speccer-line-width)
       width 48px
   &.right
     &:after
@@ -38,7 +38,7 @@
       right 100%
       top 50%
       transform translateY(-50%)
-      height 1px
+      height var(--ph-speccer-line-width)
       width 48px
   &.top
     &:after
@@ -47,7 +47,7 @@
       top 100%
       transform translateX(-50%)
       height 48px
-      width 1px
+      width var(--ph-speccer-line-width)
   &.bottom
     &:after
       left 50%
@@ -56,7 +56,7 @@
       bottom 100%
       transform translateX(-50%)
       height 48px
-      width 1px
+      width var(--ph-speccer-line-width)
 
   & .speccer-styles
     list-style none
@@ -69,7 +69,7 @@
 
     & .property
       font-weight normal
-      color #3f85f2
+      color var(--ph-speccer-typography-color-property)
       text-align left
       padding 0
       font-size 12px
@@ -77,7 +77,7 @@
 
     & > li
       font-weight normal
-      color #e227b3
+      color var(--ph-speccer-typography-color-value)
       text-align left
       padding 0
       font-size 12px
